<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_action_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_status"
            android:icon="@drawable/ic_action_status"
            android:title="@string/menu_status" />
        <item
            android:id="@+id/nav_industries"
            android:icon="@drawable/ic_action_industries"
            android:title="@string/menu_industrial" />

        <item
            android:id="@+id/nav_documents"
            android:icon="@drawable/ic_action_documents"
            android:title="@string/menu_documents" />


        <item    android:id="@+id/nav_item_list"
            android:icon="@drawable/ic_action_documents"
            android:title="@string/menu_item" />


    </group>
</menu>