<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.navigation.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_itemFragment"
            app:destination="@id/itemFragment" />
        <action
            android:id="@+id/action_nav_home_to_nav_industries"
            app:destination="@id/nav_industries" />
    </fragment>

    <fragment
        android:id="@+id/nav_status"
        android:name="com.example.navigation.ui.status.StatusFragment"
        android:label="@string/menu_status"
        tools:layout="@layout/fragment_status" />

    <fragment
        android:id="@+id/nav_industries"
        android:name="com.example.navigation.ui.industries.IndustriesFragment"
        android:label="@string/menu_industries"
        tools:layout="@layout/fragment_industries" />

    <fragment
        android:id="@+id/nav_documents"
        android:name="com.example.navigation.ui.industries.IndustriesFragment"
        android:label="@string/menu_documents"
        tools:layout="@layout/fragment_documents" />
    <fragment
        android:id="@+id/itemFragment"
        android:name="com.example.navigation.ItemFragment"
        android:label="fragment_item_list"
        tools:layout="@layout/fragment_item_list" />


</navigation>